icon alignment fix

--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -25,6 +25,7 @@
       font-size: 0.5em;
       padding-top: 0.5em;
       a {
+        align-items: center;
         flex-direction: column
       }
       svg {
